--- a/gallery.html
+++ b/gallery.html
@@ -31,8 +31,8 @@
 			<div class="frame">
 				<header class="codrops-header">
 					<div class="codrops-links">
-						<a class="codrops-icon codrops-icon--prev" href="" title="Previous Demo"><svg class="icon icon--arrow"><use xlink:href="#icon-arrow"></use></svg></a>
-						<a class="codrops-icon codrops-icon--drop" href="" title="Back to the article"><svg class="icon icon--drop"><use xlink:href="#icon-drop"></use></svg></a>
+						<a class="codrops-icon codrops-icon--prev" href="https://tympanus.net/Development/GridLayoutSlideshow/" title="Previous Demo"><svg class="icon icon--arrow"><use xlink:href="#icon-arrow"></use></svg></a>
+						<a class="codrops-icon codrops-icon--drop" href="https://tympanus.net/codrops/?p=31849" title="Back to the article"><svg class="icon icon--drop"><use xlink:href="#icon-drop"></use></svg></a>
 					</div>
 					<h1 class="codrops-header__title">Image Pieces Effect</h1>
 				</header>
@@ -42,7 +42,7 @@
 					<a class="demo" href="entry.html">Demo 3</a>
 					<a class="demo" href="grid.html">Demo 4</a>
 				</nav>
-				<a class="pater" href="http://go.hackingui.com/NomNomcodrops250717" onClick="recordOutboundLink(this, 'Outbound Links', 'NomNomcodrops250717');return false;">
+				<a class="pater" href="http://go.hackingui.com/NomNomcodrops2507171" onClick="recordOutboundLink(this, 'Outbound Links', 'NomNomcodrops250717');return false;">
 					<div class="pater__img pieces" style="background-image: url(pater/NomNom.png)" data-image-alt="pater/NomNom2.png"></div>
 					<h3 class="pater__title">Data-driven designers use <strong>NomNom</strong> to learn from customers faster</h3>
 					<p class="pater__description">The easiest way to search, organize and share all your customer feedback and user research in one place. <strong>NomNom is data-driven design made easy. &rarr;</strong></p>
